# rendered_wallpaper

./: .gitignore  CMakeLists.txt  README.md  build.bat
ipc/: CMakeLists.txt
ipc/private/: ipc.cpp
ipc/public/: ipc.h
shaders/: octagrams.hlsl  pixel.hlsl  rm.hlsl  snap.hlsl  sunset.hlsl  tunnel.hlsl  vertex.hlsl  weird_truchet.hlsl
tasks/: CMakeLists.txt
tasks/private/: tasks.cpp
tasks/public/: tasks.h
wp/: CMakeLists.txt
wp/private/: dim.h  render.cpp  render.h  renderWindow.cpp  renderWindow.h  wp.cpp  wp_manager.cpp
